# quizmeet-rs

./: .gitignore  Cargo.toml  Rocket.toml  convert  open_netsh.ps1  watch
actix/: Cargo.toml
actix/src/: error.rs  lib.rs  main.rs
actix/templates/: error.html  index.html
bevy/: Cargo.toml
core/: Cargo.toml
csv/: Cargo.toml  board.json
csv/src/: lib.rs  main.rs
csv/src/types/: mod.rs
csv/src/types/board/: board.rs  mod.rs  questions.rs
csv/src/types/quizzer/: summary.rs
csv/src/types/team/: summary.rs
csv/src/utils/: cli.rs
idl/: Cargo.toml
idl/src/: lib.rs  name.rs  quiz.rs
idl/src/stats/: error.rs  mod.rs  quizzer.rs  record.rs  team.rs
io/: Cargo.toml
io/src/: lib.rs  manager.rs  parse_ods.rs  quiz_file.rs  watcher.rs
rocket/: Cargo.toml  clean  convert
rocket/src/: entries.rs  lib.rs
rocket/templates/: index.html.tera
src/: context_macro.rs  entries.rs  io.rs  lib.rs  main.rs  parse.rs  quiz_sum.rs  quiz_sum2  stats.rs
src/quiz_sum/: mod.rs  parse.rs  quiz.rs  quizzer.rs  team.rs
templates/: base.html.tera  index.html  index.html.tera  table-view.html.tera  table.html.tera  user.html
