[package]
name = "quizmeet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = "4.3.19"
regex = "1.9.1"
serde = "1.0.179"
serde_json = "1.0.104"
spreadsheet-ods = "0.16.0"
thiserror = "1.0.44"
