[package]
name = "quizmeet-rs-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
anyhow = "1.0.72"
clap = "4.3.19"
env_logger = "0.10.0"
log = "0.4.19"
polodb_core = "*"
regex = "1.9.1"
serde = "1.0.179"
serde_json = "1.0.104"
spreadsheet-ods = "0.16.0"
tera = "1.19.0"
thiserror = "1.0.44"

[dependencies.quizmeet-rs-idl]
path = "../idl"

[dependencies.quizmeet-rs-io]
path = "../io"
