[package]
name = "quizmeet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.72"
clap = "4.3.19"
env_logger = "0.10.0"
log = "0.4.19"
polodb_core = "*"
regex = "1.9.1"
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = "1.0.179"
serde_json = "1.0.104"
spreadsheet-ods = "0.16.0"
tera = "1.19.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["sync"] }

[dependencies.quizmeet-rs-idl]
path = "../idl"

[dependencies.quizmeet-rs-io]
path = "../io"

[dependencies.quizmeet-rs-rocket]
path = "../rocket"

[dependencies.quizmeet-rs-actix]
path = "../actix"
