[package]
name = "quizmeet-rs-idl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
float-cmp = "0.9.0"
log = "0.4.19"
redis = "0.23.1"
redis-macros = "0.2.1"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
