[package]
name = "quizmeet-rs-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
log = "0.4.19"
serde = "1.0.179"
serde_json = "1.0.104"
spreadsheet-ods = "0.16.0"


[dependencies.quizmeet-rs-idl]
path = "../idl"
