[package]
name = "quizmeet-rs-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-hash = "0.5.0"
crossbeam-channel = "0.5.8"
glob = "0.3.1"
log = "0.4.19"
notify = "6.0.1"
serde = "1.0.179"
serde_json = "1.0.104"
sha2 = "0.10.7"
spreadsheet-ods = "0.16.0"
tokio = "1.29.1"


[dependencies.quizmeet-rs-idl]
path = "../idl"
