[package]
name = "quizmeet-rs-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
rocket = "0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }

[dependencies.quizmeet-rs-idl]
path = "../idl"
